--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,19 @@
   <groupId>org.example</groupId>
   <artifactId>cache_demo</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <packaging>war</packaging>
 
   <name>cache_demo Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
@@ -27,6 +39,19 @@
       <artifactId>spring-web</artifactId>
       <version>${spring.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.springframework</groupId>
